# coverage_formats

./: Cargo.toml  Readme.md
examples/: go_merge_all_in_dir.rs  jacoco_read_exec_file.rs
examples/files/: kafka_coverage.exec
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_go_read.rs  fuzz_jacoco_read.rs
src/: lib.rs  result.rs
src/go/: error.rs  mod.rs  reader.rs  writer.rs
src/jacoco/: error.rs  mod.rs  reader.rs
