[package]
name = "coverage_formats"
version = "0.1.0"
edition = "2024"

[features]
default = ["serialization"]
serialization = ["serde", "chrono/serde"]

[dependencies]
thiserror = "2.0.12"
byteorder = "1.5.0"
chrono = "0.4.41"

# for jacoco time abbreviations
tz-rs = "0.7.0"

serde = { version = "1.0", features = ["derive"], optional = true }

