[package]
name = "coverage_formats"
version = "0.1.2"
edition = "2024"

[features]
default = ["serialization"]
serialization = ["serde", "chrono/serde"]

[dependencies]
thiserror = "2.0"
byteorder = "1.5"
chrono = "0.4"

# for jacoco time abbreviations
tz-rs = "0.7"

serde = { version = "1.0", features = ["derive"], optional = true }
lazy-regex = {version = "3.4", features = ["std"]} # TODO: make std conditional

