[package]
name = "coverage_formats-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.coverage_formats]
path = ".."

[[bin]]
name = "fuzz_jacoco_read"
path = "fuzz_targets/fuzz_jacoco_read.rs"
test = false
doc = false
bench = false
